Tests/CompilerTests/negative/static-call.hylo
//! no-std

fun f0(x: Void) {}

fun f1<T>(x: T) {}

fun f2<T :: * -> *>() -> T { Builtin.trap() }

fun main() {
  f0<Void>(())

  f1<Void>(())
  f1<Void>(((), ()))
  f1<Void, Void>(())
}
